--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "versionamiento-app",
   "private": true,
-  "homepage": "https://oscar-dev91.github.io/versionamientoApp/",
+  "homepage": "https://oscar-dev91.github.io/versionamiento-app/",
   "version": "0.0.0",
   "type": "module",
   "scripts": {
@@ -13,7 +13,6 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "gh-pages": "^6.3.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.5.0"
@@ -27,6 +26,7 @@
     "eslint": "^9.21.0",
     "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-react-refresh": "^0.4.19",
+    "gh-pages": "^6.3.0",
     "globals": "^15.15.0",
     "postcss": "^8.5.3",
     "tailwindcss": "^3.4.17",
